# afvalstoffendienst

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: lint.yml
src/: scrape.py
