[tool.poetry]
name = "afvalstoffendienst"
version = "0.1.0"
description = ""
authors = ["Kay Hoogland <kayhoogland@hey.com>"]
packages = [
         {'include' = 'src' }
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "^1.5.2"
gazpacho = "^1.1"
typer = "^0.7.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
requests = "^2.28.1"
sqlmodel = "^0.0.8"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
pylint = "^2.11.1"
mypy = "^0.910"
flake8 = "^4.0.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
